# head_ws

./: README.md  build.sh  rena使用说明.md  run.sh
AIUI/assets/vtn/: vtn.ini
AIUI/msc/365a2fb33f66d5869a2f1b29176f54a4/local.5.6.1072.0008/: local.cache
AIUI/msc/365a2fb33f66d5869a2f1b29176f54a4/ns.5.6.1072.0008/: ns.cache
AIUI/msc/495c53c5ec63bdb257c9ce00bbce5521/local.5.6.1071.0000/: local.cache
AIUI/msc/495c53c5ec63bdb257c9ce00bbce5521/ns.5.6.1071.0000/: ns.cache
AIUI/msc/4d9924b4b8bf4fbbbf1df73d772d7760/local.5.6.1071.0000/: local.cache
AIUI/msc/4d9924b4b8bf4fbbbf1df73d772d7760/local.5.6.1072.0008/: local.cache
AIUI/msc/4d9924b4b8bf4fbbbf1df73d772d7760/ns.5.6.1071.0000/: ns.cache
AIUI/msc/4d9924b4b8bf4fbbbf1df73d772d7760/ns.5.6.1072.0008/: ns.cache
AIUI/msc/88d5183fe7eb0c397595e78690301cf5/local.5.6.1071.0000/: local.cache
AIUI/msc/88d5183fe7eb0c397595e78690301cf5/ns.5.6.1071.0000/: ns.cache
src/chat_msgs/: CMakeLists.txt  package.xml
src/chat_msgs/msg/: Content.msg  Face.msg  Servo.msg  State.msg
src/chat_msgs/srv/: Console.srv
src/face_detection/: package.xml  setup.py
src/face_detection/face_detection/: face_detection.py  face_dlib.py  face_dlib2.py  xml_read.py
src/face_detection/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/head/: package.xml  setup.py
src/head/doc/: facial_expression.md  facial_features.md  facial_mouth.md  servoInfo.txt
src/head/head/: head_control.py  mouth_talk.py  robot_action.py  robot_control.py  servo_control.py  twgedsbjngff.py  xml_plt.py  xml_read.py
src/head/head/moto/: 10思考反应（短时）.xml  11挤眉弄眼（调戏）.xml  12莞尔一笑.xml  12说话.xml  13综合动作.xml  15说话短.xml  16说话长 copy.xml  16说话长.xml  17唤醒.xml  1单次眨眼.xml  8摇头皱眉（困惑）.xml  9东张希望.xml  a动作一.xml  a动作一准备.xml  基础动作一.xml  基础动作三.xml  基础动作二.xml  基础动作五.xml  基础动作六.xml  基础动作四.xml  微表情一.xml  微表情三.xml  微表情二.xml  微表情四.xml  说话单字.xml  随机眨眼单次.xml
src/head/head/moto_backup/: 0初始化.xml  11挤眉弄眼（调戏）.xml  13综合动作.xml  15说话短.xml  1单次眨眼.xml  2单纯摇头（否定）.xml  3单次点头（肯定）.xml  4皱眉摇头（强烈否定）.xml  5皱眉瞪眼（生气）.xml  6挑眉大眼（惊奇）.xml  7挑眉大眼张嘴（惊吓）.xml  9东张希望.xml
src/head/launch/: control.launch.py  shzx.launch.py  ulaa_head.launch.py  ulaa_head_action.launch.py  vits.launch.py
src/head_console/: package.xml  setup.cfg  setup.py
src/head_console/head_console/: head_console.py
src/head_console/launch/: head_console_launch.py
src/listen/: package.xml  setup.cfg  setup.py
src/listen/launch/: listen_launch.py
src/listen/listen/: iat_ws_python3.py  listen.py  listen_online.py  record.py  record_sounddevice.py
src/listen_60s/: package.xml  setup.cfg  setup.py
src/listen_60s/listen_60s/: README.md  iat_ws_python3.py  listen_60s.py
src/listen_60s/resource/: tts.pcm
src/listen_v2/: CMakeLists.txt  package.xml
src/listen_v2/doc/: wordlist.txt
src/listen_v2/doc/iFlytek MSC Reference Manual/: msp__cmn_8h.html  qise_8h.html  qisr_8h.html  qmfv_8h.html  qtts_8h.html
src/listen_v2/include/: msp_cmn.h  msp_errors.h  msp_types.h  qise.h  qisr.h  qtts.h
src/listen_v2/include/aiui/: AIUICommon.h  AIUIErrorCode.h  AIUIType.h  AIUI_V2.h
src/listen_v2/include/voice_record/: voice2text.h
src/listen_v2/launch/: listen_v2_launch.py
src/listen_v2/src/: listen.cpp
src/listen_v2/src/voice_record/: linuxrec.c  speech_recognizer.c  voice2text.cpp
src/look/: package.xml  setup.cfg  setup.py
src/look/look/: face_dlib.py  face_dlib_test.py  head_post.py  look.py  look_v2.py  motoSet.xml  xml_read.py  环境需求.txt
src/my_package/: package.xml  setup.py
src/my_package/my_package/: my_node.py
src/remote/: CMakeLists.txt  package.xml
src/spark/: CMakeLists.txt  package.xml
src/spark/launch/: spark_launch.py
src/spark/src/: spark.cpp
src/spark/src/spark_chat/: demo.cpp
src/spark_v2/: package.xml  setup.cfg  setup.py
src/spark_v2/spark_v2/: spark.py  sparkAPI.py
src/speak/: CMakeLists.txt  package.xml
src/speak/include/aiui/: AIUIConstant.h  AIUI_C.h
src/speak/include/speak_offline/: sound_control.h  speak_offline.h
src/speak/include/voice_record/: voice2text.h
src/speak/launch/: speak_launch.py
src/speak/src/: listen.cpp  speak.cpp  speak_offline.cpp
src/speak/src/speak_offline/: a.out  main  sound_control.cpp  sound_control2.cpp  sound_control3.cpp  sound_control4.cpp  speak_offline.cpp  your_program
src/speak/src/voice_record/: iat_online_record_sample.c  voice2text.cpp
src/ulaa_msgs/robot_msgs/: CMakeLists.txt  package.xml
src/ulaa_msgs/robot_msgs/msg/: RBT.msg
src/ulaa_msgs/robot_msgs/srv/: TCP.srv
src/ulaa_msgs/user_interfaces/: CMakeLists.txt  package.xml
src/ulaa_msgs/user_interfaces/msg/: Servo.msg  Waist.msg
src/ulaa_msgs/user_interfaces/srv/: Ttstts.srv  Wavinfo.srv
src/voiceinteraction/: .gitignore  CMakeLists.txt  package.xml  readme.md
src/voiceinteraction/AIUI/cfg/: aiui.cfg
src/voiceinteraction/include/: AudioPlayer.h  AudioRecorder.h  Constants.h  MyListener.hpp  aiui_interaction.hpp  hidapi.h  protocol_proc_unit.h
src/voiceinteraction/include/aiui/: AIUI.h
src/voiceinteraction/launch/: ulaa_voice_vits.launch.py  voicexfold_control.launch.py
src/voiceinteraction/src/: AudioPlayer.cpp  AudioRecorder.cpp  MyListener.cpp  aiui_interaction.cpp  iat_publish.cpp  speech_recognizer.c  tts_subscribe.cpp  voice_control.cpp  voice_control_old.cpp
src/voiceinteraction/src/aiui_new_mic/: aiui_new_mic.cpp  mic_com.c  my_aiui.cpp
src/voiceinteraction/src/aiui_new_mic/inc/: mic_com.h  my_aiui.h  ros2node.h
